@@ -634,6 +634,9 @@
 		<a href="#about-cancelmapnamedisplay">cancel map name display</a><br>
 		
 	
+		<a href="#about-cancelnpcwalk">cancel NPC walk (who)</a><br>
+		
+	
 		<a href="#about-canlearnspell">can learn spell (hero,attack)</a><br>
 		
 	
@@ -1765,6 +1768,9 @@
 		<a href="#about-npcatspot">NPC at spot (x, y, number)</a><br>
 		
 	
+		<a href="#about-npcchasesnpc">NPC chases NPC (who, other who, stop when reached, stuck ticks)</a><br>
+		
+	
 		<a href="#about-npccopycount">NPC copy count (ID)</a><br>
 		
 	
@@ -1859,6 +1865,9 @@
 		
 	
 		<a href="#about-partymoney">party money</a><br>
+		
+	
+		<a href="#about-pathfindnpcto">pathfind NPC to (who, x, y, stuck ticks)</a><br>
 		
 	
 		<a href="#about-pausesound">pause sound (num)</a><br>
@@ -5084,6 +5093,59 @@ while (npcref) do (
 			
 			
 			
+		</p>
+</div>
+		<div class="command">
+<a name="about-pathfindnpcto"></a>
+		<h4>pathfind NPC to (who, x, y, stuck ticks)</h4>
+<p>
+			Makes the specified NPC walk along the shortest path to the destination position. They will go around obstacles. If the destination cannot be reached at all, they will go to the closest reachable tile. The first argument <span class="param">who</span> is the NPC. You can use an <a href="#about-npcreference" class="ref">NPC reference</a> or the NPC's ID number. The second argument is the destination <span class="param">x</span> tile coordinate. The third argument is the destination <span class="param">y</span> tile coordinate. The fourth argument <span class="param">stuck ticks</span> is optional. If it is included, and NPC who gets stuck along the way for more than the specified number of ticks will give up and stop pathfinding to the target. If <span class="param">stop ticks</span> is omitted or zero, the npc will keep pathfinding even if it gets stuck, and will not stop until it reaches the destination, or is stopped with the <a href="#cancel%20npc%20walk" class="undef">cancel npc walk</a> command.
+			
+			
+			<div class="seealso">See also: <ul>
+<li>
+<a href="#about-npcchasesnpc" class="ref">NPC chases NPC</a>, </li>
+<li>
+<a href="#about-cancelnpcwalk" class="ref">cancel NPC walk</a>, </li>
+<li><a href="#about-waitfornpc" class="ref">wait for NPC</a></li>
+</ul>
+</div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-npcchasesnpc"></a>
+		<h4>NPC chases NPC (who, other who, stop when reached, stuck ticks)</h4>
+<p>
+			Makes the specified NPC walk along the shortest path to the destination NPC, even if the destination NPC is moving. The chasing NPC will go around obstacles. If the destination NPC cannot be reached at all, the chasing NPC will go to the closest reachable tile. The first argument <span class="param">who</span> is the NPC who will be chasing. The second argument <span class="param">other who</span> is the NPC to chase. You can use an <a href="#about-npcreference" class="ref">NPC reference</a> or the NPC's ID number. The third argument <span class="param">stop when reached</span> can be true if you want the chasing NPC to stop after the first time it reaches the destination NPC. If ommitted or false, the NPC will keep chasing even after it reaches a moving destination NPC. The fourth argument <span class="param">stuck ticks</span> is optional. If it is included, and NPC who gets stuck along the way for more than the specified number of ticks will give up and stop pathfinding to the target. If <span class="param">stop ticks</span> is omitted or zero, the npc will keep pathfinding even if it gets stuck, and will not stop until it reaches the destination, or is stopped with the <a href="#cancel%20npc%20walk" class="undef">cancel npc walk</a> command.
+			
+			
+			<div class="seealso">See also: <ul>
+<li>
+<a href="#about-pathfindnpcto" class="ref">pathfind NPC to</a>, </li>
+<li>
+<a href="#about-cancelnpcwalk" class="ref">cancel NPC walk</a>, </li>
+<li><a href="#about-waitfornpc" class="ref">wait for NPC</a></li>
+</ul>
+</div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-cancelnpcwalk"></a>
+		<h4>cancel NPC walk (who)</h4>
+<p>
+			If the specified NPC is walking with a command like <a href="#about-walknpc" class="ref">walk NPC</a> or pathfinding with a command like <a href="#about-pathfindnpcto" class="ref">pathfind NPC to</a>, they will stop. They are allowed to finish their current step, so they will not end up misaligned with the tiles. This command has no effect on automatic NPC movement patterns, it only stops scripted movement.
+			
+			
+			<div class="seealso">See also: <ul>
+<li>
+<a href="#about-pathfindnpcto" class="ref">pathfind NPC to</a>, </li>
+<li>
+<a href="#about-npcchasesnpc" class="ref">NPC chases NPC</a>, </li>
+<li>
+<a href="#about-walknpc" class="ref">walk NPC</a>, </li>
+<li><a href="#about-cancelnpcwalk" class="ref">cancel NPC walk</a></li>
+</ul>
+</div>
 		</p>
 </div>
 		<div class="command">
@@ -17539,7 +17601,7 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 794 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
+<p>Stats: There are 797 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
